--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
-    <button class="btn btn-primary" onclick="dataLayer.push({'event': 'button1-click'});">Fire Event</button>
+    <button class="btn btn-primary" onclick="dataLayer.push({'event': 'button-click'});">Fire Event</button>
   </body>
 </html>
