--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-5RWDCWS');</script>
 <!-- End Google Tag Manager -->
-    <title>Hello, world!</title>
+    <title>Data Analytics Task</title>
   </head>
   <body>
-    <h1>Data Analytics code challenge</h1>
+    <h1>Data Analytics Task</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
